// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase 29 Tranche 7c — narrative snapshot stability > English preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "ðə gɪŋ siːz ðə wʊlf",
    },
    {
      "english": "the dogs see the wolves",
      "target": "ðə dɔgs siː ðə wʊlfs",
    },
    {
      "english": "i give you the bread",
      "target": "aj gɪvɪː ju",
    },
    {
      "english": "the king walks at the river",
      "target": "ðə gɪŋ wɔgɪːz æːd ðə dɪvəd",
    },
    {
      "english": "the king does not see the wolf",
      "target": "ðə gɪŋ nat siːz ðə wʊlf",
    },
  ],
  "preset": "english",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Romance preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "rege βideret lupuum",
    },
    {
      "english": "the dogs see the wolves",
      "target": "kakane βiderent lulupuum",
    },
    {
      "english": "i give you the bread",
      "target": "ego dareo tuum",
    },
    {
      "english": "the king walks at the river",
      "target": "rege ambularet flume",
    },
    {
      "english": "the king does not see the wolf",
      "target": "rege non βideret lupuum",
    },
  ],
  "preset": "romance",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Toki Pona preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "niːmiːniːmiː lukin soweliː",
    },
    {
      "english": "the dogs see the wolves",
      "target": "soweliː lukin soweliː",
    },
    {
      "english": "i give you the bread",
      "target": "mi pana sina",
    },
    {
      "english": "the king walks at the river",
      "target": "niːmiːniːmiː tawatiwa sapiː telosuno",
    },
    {
      "english": "the king does not see the wolf",
      "target": "niːmiːniːmiː ala lukin soweliː",
    },
  ],
  "preset": "tokipona",
}
`;
